--- a/templates/login.html
+++ b/templates/login.html
@@ -1,309 +1,327 @@
 <!DOCTYPE html>
 <html>
-<style>
-    *,
-    *:before,
-    *:after {
-        box-sizing: border-box;
-        margin: 0;
-        padding: 0;
-    }
 
-    body {
-        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-        background: #ffffff;
-    }
+<head>
+    <title>login</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.0/css/bootstrap.min.css"
+        integrity="sha256-/ykJw/wDxMa0AQhHDYfuMEwVb4JHMx9h4jD4XvHqVzU=" crossorigin="anonymous" />
 
-    input,
-    button {
-        border: none;
-        outline: none;
-        background: none;
-        font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    }
+    <style>
+        *,
+        *:before,
+        *:after {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
 
-    .tip {
-        font-size: 20px;
-        margin: 40px auto 50px;
-        text-align: center;
-    }
+        body {
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+            background: #ffffff;
+        }
 
-    .cont {
-        border-radius: 20px;
-        overflow: hidden;
-        position: relative;
-        width: 900px;
-        height: 550px;
-        margin: 0 auto 100px;
-        background: #fff;
-        box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.3), 10px 10px 15px rgba(70, 70, 70, 0.15), inset -10px -10px 15px rgba(255, 255, 255, 0.3), inset 10px 10px 15px rgba(70, 70, 70, 0.15);
-    }
+        input,
+        button {
+            border: none;
+            outline: none;
+            background: none;
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+        }
 
-    .form {
-        position: relative;
-        width: 640px;
-        height: 100%;
-        -webkit-transition: -webkit-transform 1.2s ease-in-out;
-        transition: -webkit-transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-        padding: 50px 30px 0;
-    }
+        .tip {
+            font-size: 20px;
+            margin: 40px auto 50px;
+            text-align: center;
+        }
 
-    .sub-cont {
-        overflow: hidden;
-        position: absolute;
-        left: 640px;
-        top: 0;
-        width: 900px;
-        height: 100%;
-        padding-left: 260px;
-        background: #fff;
-        -webkit-transition: -webkit-transform 1.2s ease-in-out;
-        transition: -webkit-transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-    }
+        .cont {
+            border-radius: 20px;
+            overflow: hidden;
+            position: relative;
+            width: 900px;
+            height: 550px;
+            margin: 0 auto 100px;
+            background: #fff;
+            box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.3), 10px 10px 15px rgba(70, 70, 70, 0.15), inset -10px -10px 15px rgba(255, 255, 255, 0.3), inset 10px 10px 15px rgba(70, 70, 70, 0.15);
+        }
 
-    .cont.s--signup .sub-cont {
-        -webkit-transform: translate3d(-640px, 0, 0);
-        transform: translate3d(-640px, 0, 0);
-    }
+        .form {
+            position: relative;
+            width: 640px;
+            height: 100%;
+            -webkit-transition: -webkit-transform 1.2s ease-in-out;
+            transition: -webkit-transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
+            padding: 50px 30px 0;
+        }
 
-    button {
-        display: block;
-        margin: 0 auto;
-        width: 260px;
-        height: 36px;
-        border-radius: 30px;
-        color: #fff;
-        font-size: 15px;
-        cursor: pointer;
-    }
+        .sub-cont {
+            overflow: hidden;
+            position: absolute;
+            left: 640px;
+            top: 0;
+            width: 900px;
+            height: 100%;
+            padding-left: 260px;
+            background: #fff;
+            -webkit-transition: -webkit-transform 1.2s ease-in-out;
+            transition: -webkit-transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
+        }
 
-    .img {
-        overflow: hidden;
-        z-index: 2;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 260px;
-        height: 100%;
-        padding-top: 360px;
-    }
+        .cont.s--signup .sub-cont {
+            -webkit-transform: translate3d(-640px, 0, 0);
+            transform: translate3d(-640px, 0, 0);
+        }
 
-    .img:before {
-        content: '';
-        position: absolute;
-        right: 0;
-        top: 0;
-        width: 900px;
-        height: 100%;
-        background-image: url("ext.jpg");
-        opacity: .8;
-        background-size: cover;
-        -webkit-transition: -webkit-transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-    }
+        button {
+            display: block;
+            margin: 0 auto;
+            width: 260px;
+            height: 36px;
+            border-radius: 30px;
+            color: #fff;
+            font-size: 15px;
+            cursor: pointer;
+        }
 
-    .img:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.6);
-    }
+        .img {
+            overflow: hidden;
+            z-index: 2;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 260px;
+            height: 100%;
+            padding-top: 360px;
+        }
 
-    .cont.s--signup .img:before {
-        -webkit-transform: translate3d(640px, 0, 0);
-        transform: translate3d(640px, 0, 0);
-    }
+        .img:before {
+            content: '';
+            position: absolute;
+            right: 0;
+            top: 0;
+            width: 900px;
+            height: 100%;
+            background-image: url("ext.jpg");
+            opacity: .8;
+            background-size: cover;
+            -webkit-transition: -webkit-transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
+        }
 
-    .img__text {
-        z-index: 2;
-        position: absolute;
-        left: 0;
-        top: 50px;
-        width: 100%;
-        padding: 0 20px;
-        text-align: center;
-        color: #fff;
-        -webkit-transition: -webkit-transform 1.2s ease-in-out;
-        transition: -webkit-transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out;
-        transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
-    }
+        .img:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.6);
+        }
 
-    .img__text h2 {
-        margin-bottom: 10px;
-        font-weight: normal;
-    }
+        .cont.s--signup .img:before {
+            -webkit-transform: translate3d(640px, 0, 0);
+            transform: translate3d(640px, 0, 0);
+        }
 
-    .img__text p {
-        font-size: 14px;
-        line-height: 1.5;
-    }
+        .img__text {
+            z-index: 2;
+            position: absolute;
+            left: 0;
+            top: 50px;
+            width: 100%;
+            padding: 0 20px;
+            text-align: center;
+            color: #fff;
+            -webkit-transition: -webkit-transform 1.2s ease-in-out;
+            transition: -webkit-transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out;
+            transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
+        }
 
-    .cont.s--signup .img__text.m--up {
-        -webkit-transform: translateX(520px);
-        transform: translateX(520px);
-    }
+        .img__text h2 {
+            margin-bottom: 10px;
+            font-weight: normal;
+        }
 
-    .img__text.m--in {
-        -webkit-transform: translateX(-520px);
-        transform: translateX(-520px);
-    }
+        .img__text p {
+            font-size: 14px;
+            line-height: 1.5;
+        }
 
-    .cont.s--signup .img__text.m--in {
-        -webkit-transform: translateX(0);
-        transform: translateX(0);
-    }
+        .cont.s--signup .img__text.m--up {
+            -webkit-transform: translateX(520px);
+            transform: translateX(520px);
+        }
 
-    .img__btn {
-        overflow: hidden;
-        z-index: 2;
-        position: relative;
-        width: 100px;
-        height: 36px;
-        margin: 0 auto;
-        background: transparent;
-        color: #fff;
-        text-transform: uppercase;
-        font-size: 15px;
-        cursor: pointer;
-    }
+        .img__text.m--in {
+            -webkit-transform: translateX(-520px);
+            transform: translateX(-520px);
+        }
 
-    .img__btn:after {
-        content: '';
-        z-index: 2;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        border: 2px solid #fff;
-        border-radius: 30px;
-    }
+        .cont.s--signup .img__text.m--in {
+            -webkit-transform: translateX(0);
+            transform: translateX(0);
+        }
 
-    .img__btn span {
-        position: absolute;
-        left: 0;
-        top: 0;
-        display: -webkit-box;
-        display: flex;
-        -webkit-box-pack: center;
-        justify-content: center;
-        -webkit-box-align: center;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-        -webkit-transition: -webkit-transform 1.2s;
-        transition: -webkit-transform 1.2s;
-        transition: transform 1.2s;
-        transition: transform 1.2s, -webkit-transform 1.2s;
-    }
+        .img__btn {
+            overflow: hidden;
+            z-index: 2;
+            position: relative;
+            width: 100px;
+            height: 36px;
+            margin: 0 auto;
+            background: transparent;
+            color: #fff;
+            text-transform: uppercase;
+            font-size: 15px;
+            cursor: pointer;
+        }
 
-    .img__btn span.m--in {
-        -webkit-transform: translateY(-72px);
-        transform: translateY(-72px);
-    }
+        .img__btn:after {
+            content: '';
+            z-index: 2;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            border: 2px solid #fff;
+            border-radius: 30px;
+        }
 
-    .cont.s--signup .img__btn span.m--in {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-    }
+        .img__btn span {
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: -webkit-box;
+            display: flex;
+            -webkit-box-pack: center;
+            justify-content: center;
+            -webkit-box-align: center;
+            align-items: center;
+            width: 100%;
+            height: 100%;
+            -webkit-transition: -webkit-transform 1.2s;
+            transition: -webkit-transform 1.2s;
+            transition: transform 1.2s;
+            transition: transform 1.2s, -webkit-transform 1.2s;
+        }
 
-    .cont.s--signup .img__btn span.m--up {
-        -webkit-transform: translateY(72px);
-        transform: translateY(72px);
-    }
+        .img__btn span.m--in {
+            -webkit-transform: translateY(-72px);
+            transform: translateY(-72px);
+        }
 
-    h2 {
-        width: 100%;
-        font-size: 26px;
-        text-align: center;
-    }
+        .cont.s--signup .img__btn span.m--in {
+            -webkit-transform: translateY(0);
+            transform: translateY(0);
+        }
 
-    label {
-        display: block;
-        width: 260px;
-        margin: 25px auto 0;
-        text-align: center;
-    }
+        .cont.s--signup .img__btn span.m--up {
+            -webkit-transform: translateY(72px);
+            transform: translateY(72px);
+        }
 
-    label span {
-        font-size: 12px;
-        color: #cfcfcf;
-        text-transform: uppercase;
-    }
+        h2 {
+            width: 100%;
+            font-size: 26px;
+            text-align: center;
+        }
 
-    input {
-        display: block;
-        width: 100%;
-        margin-top: 5px;
-        padding-bottom: 5px;
-        font-size: 16px;
-        border-bottom: 1px solid rgba(0, 0, 0, 0.4);
-        text-align: center;
-    }
+        label {
+            display: block;
+            width: 260px;
+            margin: 25px auto 30px;
+            text-align: center;
+        }
 
-    .forgot-pass {
-        margin-top: 15px;
-        text-align: center;
-        font-size: 12px;
-        color: #cfcfcf;
-    }
+        label span {
+            font-size: 12px;
+            color: #cfcfcf;
+            text-transform: uppercase;
+        }
 
-    .submit {
-        margin-top: 40px;
-        margin-bottom: 20px;
-        background: #7589a0;
-        text-transform: uppercase;
-    }
+        input {
+            display: block;
+            width: 100%;
+            margin-top: 5px;
+            padding-bottom: 5px;
+            font-size: 16px;
+            border-bottom: 1px solid rgba(0, 0, 0, 0.4);
+            text-align: center;
+        }
 
-    .fb-btn {
-        border: 2px solid #d3dae9;
-        color: #8fa1c7;
-    }
+    /*    .forgot-pass {
+            margin-top: 15px;
+            text-align: center;
+            font-size: 12px;
+            color: #cfcfcf;
+        }*/
 
-    .fb-btn span {
-        font-weight: bold;
-        color: #455a81;
-    }
+        .submit {
+            margin-top: 40px;
+            margin-bottom: 20px;
+            background: #7589a0;
+            text-transform: uppercase;
+        }
 
-    .sign-in {
-        -webkit-transition-timing-function: ease-out;
-        transition-timing-function: ease-out;
-    }
+        .fb-btn {
+            border: 2px solid #d3dae9;
+            color: #8fa1c7;
+        }
 
-    .cont.s--signup .sign-in {
-        -webkit-transition-timing-function: ease-in-out;
-        transition-timing-function: ease-in-out;
-        -webkit-transition-duration: 1.2s;
-        transition-duration: 1.2s;
-        -webkit-transform: translate3d(640px, 0, 0);
-        transform: translate3d(640px, 0, 0);
-    }
+        .fb-btn span {
+            font-weight: bold;
+            color: #455a81;
+        }
 
-    .sign-up {
-        -webkit-transform: translate3d(-900px, 0, 0);
-        transform: translate3d(-900px, 0, 0);
-    }
+        .sign-in {
+            -webkit-transition-timing-function: ease-out;
+            transition-timing-function: ease-out;
+        }
 
-    .cont.s--signup .sign-up {
-        -webkit-transform: translate3d(0, 0, 0);
-        transform: translate3d(0, 0, 0);
-    }
-</style>
+        .cont.s--signup .sign-in {
+            -webkit-transition-timing-function: ease-in-out;
+            transition-timing-function: ease-in-out;
+            -webkit-transition-duration: 1.2s;
+            transition-duration: 1.2s;
+            -webkit-transform: translate3d(640px, 0, 0);
+            transform: translate3d(640px, 0, 0);
+        }
+
+        .sign-up {
+            -webkit-transform: translate3d(-900px, 0, 0);
+            transform: translate3d(-900px, 0, 0);
+        }
+
+        .cont.s--signup .sign-up {
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+        }
+    </style>
+</head>
 <br>
 <br>
+<body>
+    
+            <!-----warning--------->
+            {% for message in get_flashed_messages() %}
+            
+            <div class="w-50 p-3 alert alert-warning alert-dismissible fade show" role="alert">
+                {{message}}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+          
+           {% endfor %}
 <div class="cont">
-    <!-----sind in -->
-    <div class="form sign-in">
 
+    <!--------------------------------------------sind in ------------------------------------------->
+    <div class="form sign-in">       
         <h2>Welcome</h2>
         <form action="" method="POST">
             {{form1.hidden_tag()}}
@@ -313,7 +331,7 @@
             <label>
                 {{form1.password}}
             </label>
-            <p class="forgot-pass">Forgot password?</p>
+            <!---  <p class="forgot-pass">Forgot password?</p> -->
             {{form1.submit}}
         </form>
     </div>
@@ -333,7 +351,8 @@
                 <span class="m--in">Sign In</span>
             </div>
         </div>
-        <!-----sind up -->
+   
+        <!---------------------------------------------------sind up ----------------------------------------------------->
         <div class="form sign-up">
             <h2>Create your Account</h2>
             <form action="" method="POST">
@@ -354,7 +373,8 @@
     </div>
     <!---->
 </div>
-<!--------------------------------------------------------------------------->
+</body>
+<!-----------------------------------   script    ---------------------------------------->
 <script>
     document.querySelector('.img__btn').addEventListener('click', function () {
         document.querySelector('.cont').classList.toggle('s--signup');
