--- a/static/styleprofile.css
+++ b/static/styleprofile.css
@@ -44,7 +44,7 @@ body {
     position: relative;
     width: 100%;
     height: 99%;
-    margin: 4px;
+    margin: 2px;
     background: #ffffff;
     box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.3);
     /* border: #000 solid;*/
@@ -74,6 +74,7 @@ body {
     height: 130px;
     background-image: url("images/dentist.png");
     background-size: 100%;
+   
 }
 
 /*implant img*/
@@ -86,7 +87,19 @@ body {
     height: 60px;
     background-image: url("images/dental-implant.png");
     background-size: 100%;
-
+    z-index: 2;
+   
+}
+/* chosin icon color implant */
+.selected_icon_divimg2{
+    background: #bed1d1;
+    border-radius: 6px;
+    position: absolute;
+    top: 126px;
+    left: 30%;
+    width: 200px;
+    height: 100px;
+    z-index: 1;
 
 }
 
@@ -100,6 +113,7 @@ body {
     height: 60px;
     background-image: url("images/folder.png");
     background-size: 100%;
+    z-index: 2;
 }
 
 .porfilehead .divimg3:hover,
@@ -110,17 +124,14 @@ body {
 
 /*blue background */
 .blue {
-
+    overflow: auto;
     border-radius: 20px;
     position: relative;
     width: 80%;
     height: 68%;
     margin: 0 auto;
     background: #bed1d1;
-    box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.3);
-
-
-
+   
 }
 
 /*  border  */
@@ -144,12 +155,48 @@ body {
     border-radius: 15px;
     background-position: center;
     background-size: cover;
+    border: 1px solid black;
+    
 }
-
-.file {
+.form_style{
     position: absolute;
-    top: 76%;
-    left: 13%;
+    top: 22%;
+    left: 30%;
+
+}
+/*  submit button style */
+.submit{
+    background-color: Transparent;
+    border: none;
+    width: 50px;
+    height: 50px;
+    background-image: url("images/right-arrow.png");
+    background-size: cover;
+    background-size: 100%;  
+}
+.submit:hover{
+    border-radius:50%;
+    box-shadow: 10px 10px 15px rgb(156, 165, 168);
+
+}
+/* upload implant form postion  */
+.upload {
+    position: absolute;
+    top: 100%;
+    left: -120%;
+    
+}
+.sizing{
+   
+    max-width: 100%;
+    max-height: 100%;
+   
+}
+/*form filed style */
+.info_style{
+    border-color: white;
+    border-radius: 10px;
+    opacity: 0.8;
 }
 
 /*circl */
@@ -207,3 +254,41 @@ body {
     background-size: 100%;
 
 }
+/* bar */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+  .error{
+    border-radius: 20px;
+    height: 70%; ;
+    width: 50%;
+    margin: 50px auto;
+    background: #ffffff;
+    box-shadow: -10px -10px 15px rgba(255, 255, 255, 0.3);
+    background-image: url("images/error.png");
+    background-repeat: no-repeat;
+    background-size: 100px;
+    background-position:50% 10%;
+  }
+  .error h3{
+    color: #1f4e69;
+    position:relative;
+    text-align: center;
+    top: 50%;
+    left: 0%;
+  }
