modified:   _database.db 	modified:   app.py 	deleted:    static/implants/BW_ahmed_04_19_2022_05_21_06_113_2019.jpg 	deleted:    static/implants/BW_ahmed_04_19_2022_21_31_03_113_2019.jpg 	deleted:    static/implants/BW_ahmed_04_19_2022_21_32_23_113_2019.jpg 	deleted:    static/implants/BW_ahmed_04_19_2022_21_33_13_113_2019.jpg 	renamed:    static/implants/BW_rana_04_28_2022_08_36_04_try1bb.jpeg -> static/implants/BW_ahmed_05_01_2022_06_54_36_try1bb.jpeg 	renamed:    static/implants/BW_shahad_04_26_2022_07_01_53_try1bb.jpeg -> static/implants/BW_ahmed_05_01_2022_06_55_38_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_08_18_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_11_58_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_12_25_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_18_06_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_18_20_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_18_50_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_21_23_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_27_30_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_28_19_try1bb.jpeg 	deleted:    static/implants/BW_rana_04_30_2022_06_31_59_try1bb.jpeg 	renamed:    static/implants/BW_shahad_04_28_2022_08_23_54_try1bb.jpeg -> static/implants/BW_rana_05_04_2022_02_50_50_try1bb.jpeg 	renamed:    static/implants/BW_shahad_04_28_2022_08_33_16_try1bb.jpeg -> static/implants/BW_rana_05_04_2022_04_11_40_try1bb.jpeg 	renamed:    static/implants/BW_shahad_04_28_2022_08_33_57_try1bb.jpeg -> static/implants/BW_rana_05_04_2022_04_19_06_try1bb.jpeg 	renamed:    static/implants/BW_shahad_04_30_2022_06_41_55_try1bb.jpeg -> static/implants/BW_rana_05_04_2022_04_20_13_try1bb.jpeg 	renamed:    static/implants/BW_shahad_04_30_2022_06_43_00_try1bb.jpeg -> static/implants/BW_rana_05_04_2022_04_28_10_try1bb.jpeg 	renamed:    static/implants/BW_shahad_04_30_2022_07_01_59_try1bb.jpeg 

--- a/static/styleprofile.css
+++ b/static/styleprofile.css
@@ -156,7 +156,7 @@ body {
     background-position: center;
     background-size: cover;
     border: 1px solid black;
-    
+
 }
 .form_style{
     position: absolute;
@@ -291,4 +291,61 @@ body {
     text-align: center;
     top: 50%;
     left: 0%;
+  }
+
+  .flex-wrapper {
+    display: flex;
+    flex-flow: row nowrap;
+  }
+  
+  .single-chart {
+    width: 10%;
+    justify-content: start ;
+  }
+  
+  .circular-chart {
+    display: block;
+    margin: 10px 2px;
+    max-width: 80%;
+    max-height: 70px;
+  }
+  
+  .circle-bg {
+    fill: none;
+    stroke: #eee;
+    stroke-width: 3.8;
+  }
+  
+
+
+  .circle {
+    fill: none;
+    stroke-width: 2.8;
+    stroke-linecap: round;
+    animation: progress 1s ease-out forwards;
+  }
+  
+  @keyframes progress {
+    0% {
+      stroke-dasharray: 0 100;
+    }
+  }
+  
+  .circular-chart.orange .circle {
+    stroke: #ff9f00;
+  }
+  
+  .circular-chart.green .circle {
+    stroke: #4CC790;
+  }
+  
+  .circular-chart.blue1 .circle {
+    stroke: #3c9ee5;
+  }
+  
+  .percentage {
+    fill: #666;
+    font-family: sans-serif;
+    font-size: 0.5em;
+    text-anchor: middle;
   }
