--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -80,9 +80,87 @@
 
            <!---- <div class="detection"></div>---->
             <div class="half2">
-                <h1>Manufacturer Details</h1>
-                {{resultlast}}
 
+                <h1>Manufacturer Details</h1>
+                <!-----------percentage -------------->
+                {% if shahad|length == 0 %}
+               
+                {% else %}
+                <div>
+                  <!----  {% set variable_nam = shahad[0][0] %}---->
+
+                <div class="flex-wrapper">
+
+                    <div class="single-chart">
+                      <svg viewBox="0 0 36 36" class="circular-chart orange">
+                        <path class="circle-bg"
+                          d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831"
+                        />
+                        <path class="circle"
+                          stroke-dasharray="{{shahad[0][0]}}, 100"
+                          d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831"
+                        />
+                        <text x="18" y="20.35" class="percentage">{{ shahad[0][0]}}</text>
+                      </svg>
+                    </div>
+                  
+                    <div class="single-chart">
+                      <svg viewBox="0 0 36 36" class="circular-chart green">
+                        <path class="circle-bg"
+                          d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831"
+                        />
+                        <path class="circle"
+                          stroke-dasharray="{{shahad[0][1]}}, 100"
+                          d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831"
+                        />
+                        <text x="18" y="20.35" class="percentage">{{shahad[0][1]}}</text>
+                      </svg>
+                    
+                    </div>
+                    
+                    <div class="single-chart">
+                      <svg viewBox="0 0 36 36" class="circular-chart blue1">
+                        <path class="circle-bg"
+                          d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831"
+                        />
+                        <path class="circle"
+                          stroke-dasharray="{{shahad[0][2]}}, 100"
+                          d="M18 2.0845
+                            a 15.9155 15.9155 0 0 1 0 31.831
+                            a 15.9155 15.9155 0 0 1 0 -31.831"
+                        />
+                        <text x="18" y="20.35" class="percentage">{{shahad[0][2]}}</text>
+                      </svg>
+                    </div>
+                  </div>
+                </div><!-----------end percentage -------------->
+{% endif %}
+
+
+
+
+                <table style="border-spacing: 40px 10px;"> 
+                     <tr>
+                    {% for item in resultlast %}
+                  
+                        <td> {{item}}</td>
+                    
+                    {% endfor %}
+                </tr>
+                </table>
+
+              <!----  {{resultlast}}--->
+              
              <!----   <div class="container">
                     <div id="activeBorder" class="active-border">
                         <div id="circle" class="circle">
@@ -91,19 +169,19 @@
                     </div>
                 </div>--->
 
-            </div>
+            </div><!--half 2-->
 
-        </div> 
-            <!----xray end ---------->
-
-
+        </div> <!----xray end A ---------->
+            
 
 
 
 
 
 
-            <!------------------------------------------------files page ------------------------------------------------------->
+
+
+            <!------------------------------------------------files page B------------------------------------------------------->
              <div id="B" class="blue">
 
                 {% if not data %}
@@ -129,7 +207,7 @@
                             </td>
                             <td style="border-right: .1em solid black; padding: 1em;">{{item[5]}}</td>
                             <td style="border-right: .1em solid black; padding: 1em;">{{item[6]}}</td>
-                            <td style="border-right: .1em solid black; padding: 1em;">{{item[7]}}</td>
+                            <td style="border-right: .1em solid black; padding: 1em;"> {{item[7]}} </td>
                             <td style="border-right: .1em solid black; padding: 1em;">{{item[8]}}</td>
     
                         </tr>
@@ -139,7 +217,7 @@
 
              </div> 
 
-        </div>
+        </div> 
         <!--- save part end --->
 
 
@@ -148,8 +226,8 @@
 
 
 
-    </div>
-    <!------ withe space end  -------->
+   <!----- </div>
+    - withe space end  -------->
 
 
 
