--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
         <br>
         <Center><h1>Contact Us</h1></Center>
         </div>
-        <div class ="space"></div>
+        <div class ="space"></div> <!---space end--->
     <div class="container mt-5">
         <div class="row g-2">
             <div class="col-md-4">
